add as img corretas dos pokemons e as infos dos cards

--- a/index.html
+++ b/index.html
@@ -28,25 +28,58 @@
                  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="Bulbasaur">
                 </div>
             </li>
-            <li>
-                ivysaur
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="Ivysaur">
+            <li class="pokemon">
+                <span class="number">#002</span>
+                <span class="name">ivysaur</span>
+                <div class="detail"> 
+                    <ol class="types">
+                        <li class="type">Grass</li>
+                        <li class="type">Poison</li>
+                    </ol>
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/2.png" alt="Ivysaur">
+                </div>
             </li>
-            <li>
-                venusaur
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="Venusaur">
+            <li class="pokemon">
+                <span class="number">#003</span>
+                <span class="name">venusaur</span>
+                <div class="detail"> 
+                    <ol class="types">
+                        <li class="type">Grass</li>
+                        <li class="type">Poison</li>
+                    </ol>
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/3.png" alt="Venusaur">
+                </div>
             </li>
-            <li>
-                charmander
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="Charmander">
+            <li class="pokemon">
+                <span class="number">#004</span>
+                <span class="name">charmander</span>
+                <div class="detail"> 
+                    <ol class="types">
+                        <li class="type">Fire</li>
+                    </ol>
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png" alt="Charmander">
+                </div>
             </li>
-            <li>
-                charmeleon
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="Charmeleon">
+            <li class="pokemon">
+                <span class="number">#005</span>
+                <span class="name">charmeleon</span>
+                <div class="detail"> 
+                    <ol class="types">
+                        <li class="type">Fire</li>
+                    </ol>
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/5.png" alt="Charmeleon">
+                </div>
             </li>
-            <li>
-                charizard
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="Charizard">
+            <li class="pokemon">
+                <span class="number">#006</span>
+                <span class="name">charizard</span>
+                <div class="detail"> 
+                    <ol class="types">
+                        <li class="type">Fire</li>
+                        <li class="type">Flying</li>
+                    </ol>
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/6.png" alt="Charizard">
+                </div>
             </li>
         </ol>
    </section>
