--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
    <section class="content">
     <h1>Pokedex</h1>
-        <ol class="pokemon-list">
+        <ol id="pokemonList" class="pokemon-list">
             <li class="pokemon">
                 <span class="number">#001</span>
                 <span class="name">bulbasaur</span>
@@ -83,6 +83,7 @@
             </li>
         </ol>
    </section>
-    <script src="/assets/js/main.js"></script>
+   <script src="/assets/js/poke-api.js"></script> 
+   <script src="/assets/js/main.js"></script>
 </body>
 </html>
