--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 <body>
    <section class="content">
     <h1>Pokedex</h1>
-        <ol id="pokemonList" class="pokemon-list">
-            <li class="pokemon">
+      
+    
+    <ol id="pokemonList" class="pokemons">
+            <!-- Pokemons aqui 
+        <li class="pokemon">
                 <span class="number">#001</span>
                 <span class="name">bulbasaur</span>
               <div class="detail"> 
@@ -80,8 +83,14 @@
                     </ol>
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/6.png" alt="Charizard">
                 </div>
-            </li>
+            </li>-->
         </ol>
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
+
+        </div>
    </section>
    <script src="/assets/js/poke-api.js"></script> 
    <script src="/assets/js/main.js"></script>
